crates/mega-evm/tests/satin/snapshots/satin__history_gas__a_deposit_pays_for_none_of_the_bodys_writes.snap
---
source: crates/mega-evm/tests/satin/history_gas.rs
expression: "&OutcomeView::new(&outcome)"
---
{
  "result": {
    "kind": "success",
    "reason": "Stop",
    "output": "0x",
    "created": null,
    "logs": []
  },
  "gas": {
    "regular": 15000,
    "state": 0,
    "history": 0,
    "history_bytes": 0,
    "reservoir_remaining": 0,
    "floor": 15000,
    "gas_used": 15000
  },
  "result_gas": {
    "total_gas_spent": 15000,
    "state_gas_spent": 0,
    "refunded": 0,
    "floor_gas": 15000,
    "reservoir_remaining": 0
  },
  "usage": {
    "data_size": 310,
    "write_records": 0
  },
  "limit_stop": null,
  "oracle_reads": [],
  "accounts": {
    "0x0000000000000000000000000000000000200000": {
      "balance": "0xde0b6b3a7640000",
      "nonce": 1,
      "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
      "created": false,
      "selfdestructed": false,
      "storage": []
    },
    "0x0000000000000000000000000000000000200001": "unchanged"
  }
}
