crates/mega-evm/tests/satin/snapshots/satin__history_gas__a_log_pays_for_its_address_its_topics_and_its_data.snap
---
source: crates/mega-evm/tests/satin/history_gas.rs
expression: "&by_case([(\"bare\", OutcomeView::new(&bare)),\n(\"one_topic\", OutcomeView::new(&one_topic)),\n(\"three_topics\", OutcomeView::new(&three_topics)),])"
---
{
  "bare": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": [
        {
          "address": "0x0000000000000000000000000000000000200001",
          "topics": [],
          "data": "0x"
        }
      ]
    },
    "gas": {
      "regular": 15381,
      "state": 0,
      "history": 30096,
      "history_bytes": 342,
      "reservoir_remaining": 0,
      "floor": 15000,
      "gas_used": 45477
    },
    "result_gas": {
      "total_gas_spent": 45477,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 15000,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 342,
      "write_records": 0
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000000000": "unchanged",
      "0x0000000000000000000000000000000000200000": {
        "balance": "0xde0b6b3a7640000",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000200001": "unchanged",
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  },
  "one_topic": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": [
        {
          "address": "0x0000000000000000000000000000000000200001",
          "topics": [
            "0x0000000000000000000000000000000000000000000000000000000000000001"
          ],
          "data": "0x0000000000000000000000000000000000000000000000000000000000000000"
        }
      ]
    },
    "gas": {
      "regular": 16018,
      "state": 0,
      "history": 35728,
      "history_bytes": 406,
      "reservoir_remaining": 0,
      "floor": 15000,
      "gas_used": 51746
    },
    "result_gas": {
      "total_gas_spent": 51746,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 15000,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 406,
      "write_records": 0
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000000000": "unchanged",
      "0x0000000000000000000000000000000000200000": {
        "balance": "0xde0b6b3a7640000",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000200001": "unchanged",
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  },
  "three_topics": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": [
        {
          "address": "0x0000000000000000000000000000000000200001",
          "topics": [
            "0x0000000000000000000000000000000000000000000000000000000000000003",
            "0x0000000000000000000000000000000000000000000000000000000000000002",
            "0x0000000000000000000000000000000000000000000000000000000000000001"
          ],
          "data": "0x0000000000000000000000000000000000000000000000000000000000000000"
        }
      ]
    },
    "gas": {
      "regular": 16774,
      "state": 0,
      "history": 41360,
      "history_bytes": 470,
      "reservoir_remaining": 0,
      "floor": 15000,
      "gas_used": 58134
    },
    "result_gas": {
      "total_gas_spent": 58134,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 15000,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 470,
      "write_records": 0
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000000000": "unchanged",
      "0x0000000000000000000000000000000000200000": {
        "balance": "0xde0b6b3a7640000",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000200001": "unchanged",
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  }
}
