crates/mega-evm/tests/satin/snapshots/satin__history_gas__a_reverted_deployment_pays_no_code_deposit_history.snap
---
source: crates/mega-evm/tests/satin/history_gas.rs
expression: "&BTreeMap::from([(\"deployed\", OutcomeView::new(&deployed)),\n(\"reverted\", OutcomeView::new(&reverted)),])"
---
{
  "deployed": {
    "result": {
      "kind": "success",
      "reason": "Return",
      "output": "0x0000000000000000000000000000000000000000000000000000000000000000",
      "created": "0x514a5b7cb252a8f1289dae6269a9ecf3a2aea111",
      "logs": []
    },
    "gas": {
      "regular": 24108,
      "state": 232560,
      "history": 34584,
      "history_bytes": 393,
      "reservoir_remaining": 0,
      "floor": 24704,
      "gas_used": 291252
    },
    "result_gas": {
      "total_gas_spent": 291252,
      "state_gas_spent": 232560,
      "refunded": 0,
      "floor_gas": 24704,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 393,
      "write_records": 1
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000000000": "unchanged",
      "0x0000000000000000000000000000000000200000": {
        "balance": "0xde0b6b3a7640000",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged",
      "0x514a5b7cb252a8f1289dae6269a9ecf3a2aea111": {
        "balance": "0x0",
        "nonce": 1,
        "code_hash": "0x290decd9548b62a8d60345a988386fc84ba6bc95484008f6362f93160ef3e563",
        "created": true,
        "selfdestructed": false,
        "storage": []
      }
    }
  },
  "reverted": {
    "result": {
      "kind": "revert",
      "reason": null,
      "output": "0x",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 24054,
      "state": 0,
      "history": 27544,
      "history_bytes": 313,
      "reservoir_remaining": 0,
      "floor": 24192,
      "gas_used": 51598
    },
    "result_gas": {
      "total_gas_spent": 51598,
      "state_gas_spent": 0,
      "refunded": 0,
      "floor_gas": 24192,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 313,
      "write_records": 0
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000000000": "unchanged",
      "0x0000000000000000000000000000000000200000": {
        "balance": "0xde0b6b3a7640000",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  }
}
