crates/mega-evm/tests/satin/snapshots/satin__history_gas__a_storage_write_pays_for_its_record_and_a_write_back_takes_it_back.snap
---
source: crates/mega-evm/tests/satin/history_gas.rs
expression: "&BTreeMap::from([(\"one\", OutcomeView::new(&one)),\n(\"three\", OutcomeView::new(&three)),\n(\"rewritten\", OutcomeView::new(&rewritten)),\n(\"restored\", OutcomeView::new(&restored)),])"
---
{
  "one": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 37106,
      "state": 97920,
      "history": 30800,
      "history_bytes": 350,
      "reservoir_remaining": 0,
      "floor": 15000,
      "gas_used": 165826
    },
    "result_gas": {
      "total_gas_spent": 165826,
      "state_gas_spent": 97920,
      "refunded": 0,
      "floor_gas": 15000,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 350,
      "write_records": 1
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000000000": "unchanged",
      "0x0000000000000000000000000000000000200000": {
        "balance": "0xde0b6b3a7640000",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000200001": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xd113229243592b47ef428d6002be95eb295fc14c36309dc7a7879aa5d3641ab2",
        "created": false,
        "selfdestructed": false,
        "storage": [
          {
            "slot": "0x0",
            "original": "0x0",
            "present": "0x1"
          }
        ]
      },
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  },
  "restored": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 37212,
      "state": 0,
      "history": 27280,
      "history_bytes": 310,
      "reservoir_remaining": 0,
      "floor": 15000,
      "gas_used": 51594
    },
    "result_gas": {
      "total_gas_spent": 64492,
      "state_gas_spent": 0,
      "refunded": 12898,
      "floor_gas": 15000,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 310,
      "write_records": 0
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000000000": "unchanged",
      "0x0000000000000000000000000000000000200000": {
        "balance": "0xde0b6b3a7640000",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000200001": "unchanged",
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  },
  "rewritten": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 37212,
      "state": 97920,
      "history": 30800,
      "history_bytes": 350,
      "reservoir_remaining": 0,
      "floor": 15000,
      "gas_used": 165932
    },
    "result_gas": {
      "total_gas_spent": 165932,
      "state_gas_spent": 97920,
      "refunded": 0,
      "floor_gas": 15000,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 350,
      "write_records": 1
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000000000": "unchanged",
      "0x0000000000000000000000000000000000200000": {
        "balance": "0xde0b6b3a7640000",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000200001": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0x394099fd396d14dbead2ffae5b17bb026b9bdc8abd4dfd8b00ca63672cb5a93b",
        "created": false,
        "selfdestructed": false,
        "storage": [
          {
            "slot": "0x0",
            "original": "0x0",
            "present": "0x2"
          }
        ]
      },
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  },
  "three": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 81318,
      "state": 293760,
      "history": 37840,
      "history_bytes": 430,
      "reservoir_remaining": 0,
      "floor": 15000,
      "gas_used": 412918
    },
    "result_gas": {
      "total_gas_spent": 412918,
      "state_gas_spent": 293760,
      "refunded": 0,
      "floor_gas": 15000,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 430,
      "write_records": 3
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000000000": "unchanged",
      "0x0000000000000000000000000000000000200000": {
        "balance": "0xde0b6b3a7640000",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000200001": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0x3ad7629f0c620f2c262c051e468c7855703acd5034f52cc272fc4b77baef4d85",
        "created": false,
        "selfdestructed": false,
        "storage": [
          {
            "slot": "0x0",
            "original": "0x0",
            "present": "0x1"
          },
          {
            "slot": "0x1",
            "original": "0x0",
            "present": "0x1"
          },
          {
            "slot": "0x2",
            "original": "0x0",
            "present": "0x1"
          }
        ]
      },
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  }
}
